Fix model name changes bug

--- a/app/views/orders/orderCommand.scala.html
+++ b/app/views/orders/orderCommand.scala.html
@@ -1,5 +1,5 @@
 @import helper._
-@(user: User, stocks : java.util.List[models.Stock])
+@(user: User, stocks : java.util.List[models.StoresProducts])
 
 @main(user) {
 
@@ -17,10 +17,10 @@
 		            <thead>
 		            <tr>
 		              <th></th>
-		              <th>NOM - ESPECES</th>
-		              <th>TYPE</th>
-		              <th>QUANTITE</th>
-		              <th>UNITE</th>
+		              <th>Nom - Especes</th>
+		              <th>Type</th>
+		              <th>Quantite</th>
+		              <th>Unite</th>
 		            </tr>
 		            </thead>
 		            <tbody>
