--- a/app/views/addProduct.scala.html
+++ b/app/views/addProduct.scala.html
@@ -38,7 +38,7 @@
 							</div>
 }
 						
-						<h3>Produits</h3>
+						<!-- h3>Produits</h3>
 
 						<div class="table-responsive">
 							<table class="table table-striped">
@@ -65,7 +65,7 @@
 									
 								</tbody>
 							</table>	
-					</div>
+					</div -->
 				</div>
 			</div>
 		</div>
