--- a/app/views/employee.scala.html
+++ b/app/views/employee.scala.html
@@ -1,6 +1,7 @@
 @(user: User)
 
 @main(user) {
+	
 
 <div class="wrapper wrapper-content">
       <div class="container">
@@ -26,16 +27,18 @@
 		            </tr>
 		            </thead>
 		            <tbody>
+		            	
 			            <tr>
-			              <td>Doe</td>
-			              <td>John</td>
-			              <td>john.doe@@gmail.com</td>
+			              <td>@user.firstname</td>
+			              <td>@user.lastname</td>
+			              <td>@user.email</td>
 			              <td>Cuisinier</td>
 			              <td>
 			              	<button class="btn btn-custom btn-s" title="Modifier"><i class="fa fa-cog"></i></button>
                     	  	<button class="btn btn-custom btn-s" title="Supprimer"><i class="fa fa-trash-o"></i></button>
                     	  </td>
 			            </tr>
+			            
 		            </tbody>
 		          </table>
 		        </div>
