--- a/app/views/account/signup/createFormOnly.scala.html
+++ b/app/views/account/signup/createFormOnly.scala.html
@@ -23,8 +23,14 @@
 		            'class -> "form-control"
 		        )
 		        @inputText(
-		            signupForm("fullname"),
-		            'placeholder -> Messages("fullname"),
+		            signupForm("firstname"),
+		            'placeholder -> Messages("firstname"),
+		            '_label -> null,
+		            'class -> "form-control"
+		        )
+		        @inputText(
+		            signupForm("lastname"),
+		            'placeholder -> Messages("lastname"),
 		            '_label -> null,
 		            'class -> "form-control"
 		        )
@@ -33,6 +39,20 @@
 		            '_label -> null,
 		            'placeholder -> Messages("password"),
 		            'class -> "form-control"
+		        )
+		        @select(
+		            signupForm("typeUser.id"),
+		            options = TypeUser.selectTypeUser.toSeq,
+					'_default -> "Choose One", 
+					'_label -> "Statut",     
+					'class -> "form-control "
+		        )
+		        @select(
+		            signupForm("store.id"),
+		            options = Stores.selectStores.toSeq,
+					'_default -> "Choose One", 
+					'_label -> "Entite",     
+					'class -> "form-control "
 		        )
 		    </fieldset>
 		
