--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -14,15 +14,24 @@
 		    </div>
 		    <div class="navbar-collapse collapse" id="navbar" nav-collapse>
 		      <ul class="nav navbar-nav">
+		      @if(user.typeUser.id != 1) {
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Dashboard.index()"><i class="fa fa-home imenu"></i> Stocks</a>
 		        </li>
+		      }
+		      @if(user.typeUser.id == 2) {
+		      	<li>
+		          <a aria-expanded="false" role="button" href="#"><i class="fa fa-home imenu"></i> Plats</a>
+		        </li>
+		      }
+		      @if(user.typeUser.id == 1) {
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Store.index()"><i class="fa fa-users imenu"></i> Restaurants</a>
 		        </li>
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Supplier.index()"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
 		        </li>
+		      }
 		        <li class="dropdown">
 		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Commandes<span
 		            class="caret"></span></a>
@@ -30,15 +39,17 @@
 		            <li><a href="@routes.OrderToHandle.index()">Commandes a traiter</a></li>
 		            <li><a href="@routes.OrderInProgress.index()">Commandes en cours</a></li>
 		            <li><a href="@routes.OrderValid.index()">Commandes traites</a></li>
-		            <li><a href="@routes.OrderCommand.index()">Generer une commande</a></li>
+		            @if(user.typeUser.id != 1){<li><a href="@routes.OrderCommand.index()">Generer une commande</a></li>}
 		          </ul>
 		        </li>
+		        @if(user.typeUser.id == 1){
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Product.index()"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
 		        </li>
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Employee.index()"><i class="fa fa-users imenu"></i> Employees</a>
 		        </li>
+		        }
 		      </ul>
 		      <ul class="nav navbar-nav navbar-right">
 		        <li class="dropdown">
