Fix add employee

--- a/app/views/addEmployee.scala.html
+++ b/app/views/addEmployee.scala.html
@@ -23,29 +23,30 @@
 					</div>
 					
 					@form(controllers.account.routes.Signup.save()) {
+					<div class="ibox-content">
 		
 				    <fieldset>
 				        @inputText(
 				            usersForm("email"),
 				            'placeholder -> Messages("email"),
-				            '_label -> null,
+				            '_label -> "Email",
 				            'class -> "form-control"
 				        )
 				        @inputText(
 				            usersForm("firstname"),
 				            'placeholder -> Messages("firstname"),
-				            '_label -> null,
+				            '_label -> "Prenom",
 				            'class -> "form-control"
 				        )
 				        @inputText(
 				            usersForm("lastname"),
 				            'placeholder -> Messages("lastname"),
-				            '_label -> null,
+				            '_label -> "Nom",
 				            'class -> "form-control"
 				        )
 				        @inputPassword(
 				            usersForm("inputPassword"),
-				            '_label -> null,
+				            '_label -> "Mot de passe",
 				            'placeholder -> Messages("password"),
 				            'class -> "form-control"
 				        )
@@ -53,7 +54,7 @@
 					        usersForm("typeUser.id"),
 					        options = TypeUser.selectTypeUser.toSeq,
 					        '_default -> "Choose One", 
-					        '_label -> "statut",     
+					        '_label -> "Statut",     
 					        'class -> "form-control "   
 					        )
 					    @select(
