Delete function for employees

--- a/app/views/employee.scala.html
+++ b/app/views/employee.scala.html
@@ -35,8 +35,12 @@
 			              <td>@User.typeUser.name</td>
 			              <td>
 			              @if(User.typeUser.id != 1) {
-			              	<button class="btn btn-custom btn-s" title="Modifier"><i class="fa fa-cog"></i></button>
-                    	  	<button class="btn btn-custom btn-s" title="Supprimer"><i class="fa fa-trash-o"></i></button>
+			              	<a href="#">
+			              	  <button class="btn btn-custom btn-s" title="Modifier"><i class="fa fa-cog"></i></button>
+			              	</a>
+			              	<a href="@routes.Employee.destroy(User.id)">
+                    	  	  <button class="btn btn-custom btn-s" title="Supprimer"><i class="fa fa-trash-o"></i></button>
+                    	  	</a>
                     	  }
                     	  </td>
 			            </tr>
