--- a/app/views/addEmployee.scala.html
+++ b/app/views/addEmployee.scala.html
@@ -1,4 +1,4 @@
-@(user: User, usersForm: Form[models.User]) 
+@(user: User, usersForm: Form[models.User], actionRoute : play.api.mvc.Call) 
 
 @import helper._
     @implicitFieldConstructor = @{
@@ -22,7 +22,7 @@
 						<h3>Ajout d'un employee</h3>
 					</div>
 					
-					@form(controllers.account.routes.Signup.save()){
+					@form(action=actionRoute, 'class -> "form-horizontal "){
 					<div class="ibox-content">
 		
 				    <fieldset>
