--- a/app/views/logged.scala.html
+++ b/app/views/logged.scala.html
@@ -15,11 +15,23 @@
 		    <div class="navbar-collapse collapse" id="navbar" nav-collapse>
 		      <ul class="nav navbar-nav">
 		      @if(user.typeUser.id != 1) {
+		       	@if(user.typeUser.id == 5){
+		       	<li>
+		          <a aria-expanded="false" role="button" href="@routes.StockSuppliers.index()"><i class="fa fa-home imenu"></i> Stocks</a>
+		        </li>
+		       	}else{
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Dashboard.index()"><i class="fa fa-home imenu"></i> Stocks</a>
 		        </li>
+		        }}
+		        
+		     @if(user.typeUser.id == 4) {
+		      	<li>
+		          <a aria-expanded="false" role="button" href="#"><i class="fa fa-home imenu"></i> Boissons</a>
+		        </li>
 		      }
-		      @if(user.typeUser.id == 2) {
+		 
+		       @if(user.typeUser.id == 3 || user.typeUser.id == 4) {
 		      	<li class="dropdown">
 		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Plats<span
 		            class="caret"></span></a>
@@ -39,21 +51,35 @@
 		          <a aria-expanded="false" role="button" href="@routes.Supplier.index()"><i class="fa fa-shopping-cart imenu"></i> Fournisseurs</a>
 		        </li>
 		      }
+		      
+		      @if(user.typeUser.id != 3 && user.typeUser.id != 4){
 		        <li class="dropdown">
 		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Commandes<span
 		            class="caret"></span></a>
 		          <ul role="menu" class="dropdown-menu">
-		            <li><a href="@routes.OrderToHandle.index()">Commandes a traiter</a></li>
-		            <li><a href="@routes.OrderInProgress.index()">Commandes en cours</a></li>
-		            <li><a href="@routes.OrderValid.index()">Commandes traites</a></li>
-		            @if(user.typeUser.id != 1){<li><a href="@routes.OrderCommand.index()">Generer une commande</a></li>}
+		           @if(user.typeUser.id == 2){<li><a href="@routes.OrderCommand.orderCommand(user.store.id)">Commander</a></li>}
+		           @if(user.typeUser.id == 1 || user.typeUser.id == 5){ <li><a href="@routes.OrderCommand.orderHandle(user.id)">Commandes a traiter</a></li>}
+		           @if(user.typeUser.id == 1 || user.typeUser.id == 2){<li><a href="@routes.OrderCommand.orderInProgress(user.id)">Commandes en cours</a></li>}
+		           @if(user.typeUser.id == 1 || user.typeUser.id == 2 || user.typeUser.id == 5){ <li><a href="@routes.OrderCommand.orderValid(user.id)">Commandes traites</a></li>}
 		          </ul>
 		        </li>
+		        }
+		        
 		        @if(user.typeUser.id == 1){
 		        <li>
 		          <a aria-expanded="false" role="button" href="@routes.Product.index()"><i class="fa fa-shopping-cart imenu"></i> Produits</a>
 		        </li>
-		        <li>
+		         <li class="dropdown">
+		          <a aria-expanded="false" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tags fa-flip-horizontal imenu"></i> Parametres<span
+		            class="caret"></span></a>
+		          <ul role="menu" class="dropdown-menu">
+		            <li><a href="#">Unites</a></li>
+		            <li><a href="#">Types de produit</a></li>
+		          </ul>
+		        </li>
+		        }
+		        @if(user.typeUser.id == 2){
+		          <li>
 		          <a aria-expanded="false" role="button" href="@routes.Employee.index()"><i class="fa fa-users imenu"></i> Employees</a>
 		        </li>
 		        }
